2006-11-19  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b27)

	* Made it possible to specify a thickness for fonts in
	  slideshow (in reality the thickness of the outline
	  around the text).
	* Fixed a regression in setting the user-agent for
	  the applets (broken since 1.5.1-b7)
	* Another attempt at finding the proxy automatically for
	  applets (it works in Java 1.4, but not in 1.5 and 1.6;
	  Sun really messed up on that stuff!)
	* Changed the slideshow prefs UI to use sliders for times
	  and introduced a preference for the transition duration.

2006-11-14  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b26)

	* Fixed multi-line caption alignment.
	* Now capturing out of memory errors and displaying message
	  when using Java resize (which leads to high
	  memory consumption).
	* Final fix for lower memory consumption while resizing
	  images in Java code.

2006-11-04  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b25)

	* Refactored image loading code, now using ImageIO for
	  better performance and lower memory consumption.

2006-10-24  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b24)

	* Added Norwegian translation (thanks Sverre M. Vikan)

2006-10-23  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b23)

	* Re-enabled QuickConfig preference dialog (this was a very
	  long-standing issue, thanks Neil for bringing it to
	  my attention).

2006-10-21  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b22)

	* Added warning dialog when quitting if some pictures haven't
	  been uploaded.
	* Added guidelines during crop (can be disabled by setting
	  previewDrawThirds=false in the user's properties).

2006-10-20  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b21)

	* The preview window is now tied to the main window: when
	  the user raises the one, the other comes with.

2006-10-14  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b20)

	* Final (?) solution to the problem of self-signed SSL
	  certificates. Thanks a bunch to cfreeze!
	* mindless fixed the URL to the GR FAQ.
